crates/analyzer/tests/snapshots/errors__call_non_pub_fn_on_external_contract.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: the function `do_private_thingz` on `type Foo` is private
   ┌─ compile_errors/call_non_pub_fn_on_external_contract.fe:12:13
   │
 4 │     fn do_private_thingz(mut self) {
   │        ----------------- `do_private_thingz` is defined here
   ·
12 │         foo.do_private_thingz()
   │             ^^^^^^^^^^^^^^^^^ this function is not `pub`
   │
   = `do_private_thingz` can only be called from other functions within `Foo`
   = Hint: use `pub fn do_private_thingz(..)` to make `do_private_thingz` callable from outside of `Foo`


